compiler/tests/success/risc-v/intrinsic_div.jazz
export
fn div(reg u32 arg0, reg u32 arg1) -> reg u32 {
  reg u32 x;

  // Signed
  x = #DIV(arg0, arg1);
  [x] = x;

  // Unsigned
  x = #DIVU(arg0, arg1);
  [x] = x;

  reg u32 res;
  res = x;

  return res;
}
