compiler/tests/fail/arm-m4/addw_set_flags.jazz
export
fn main(reg u32 x) {
    ?{}, x = #ADDS(x, 0x00000aca);
    [x] = x;
}
